# sophist

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.py  chatgpt.md  pyproject.toml
.agents/skills/add-discussion/: SKILL.md
.github/workflows/: deploy.yml
content/: _example.md  aesthetics-product-design.md  ai-era-human-capacities.md  anti-conservatism-os.md  christianity-and-buddhism.md  comparison-and-equanimity.md  diamond-sutra-and-competition.md  ethics-of-procreation.html  ethics-of-procreation.md  existentialism-and-absurdism.md  infinite-and-finite-games.md  labels-and-social-compression.md  meditation-as-witnessing.md  never-feel-sorry.md  non-contention.html  pharmakon.html  pharmakon.md  religion-and-reason.md  socrates-ignorance-evil.md  system-as-fuel.html  system-as-fuel.md  the-cut.md  the-one-who-bends-down.md  what-remains.md
templates/: base.html  discussion.html  index.html
theme/: theme.css
